kubernetes/Ingress/canary-update/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-v2
  namespace: my-app2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: www.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-v2
                port:
                  number: 8080
